--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,6 +17,7 @@
           <a href="/" class="nav-link">About</a>
           <a href="/research" class="nav-link">Research</a>
           <a href="/news" class="nav-link">News</a>
+          <a href="/blog" class="nav-link">Blog</a>
           <button 
             onclick="toggleDarkMode()" 
             class="p-2 rounded-lg bg-gray-100 dark:bg-gray-800 hover:bg-gray-200 dark:hover:bg-gray-700 transition-colors"
@@ -60,6 +61,7 @@
         <a href="/" class="mobile-nav-link">About</a>
         <a href="/research" class="mobile-nav-link">Research</a>
         <a href="/news" class="mobile-nav-link">News</a>
+        <a href="/blog" class="mobile-nav-link">Blog</a>
       </div>
     </div>
   </nav>
