--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -19,7 +19,11 @@ const blogPosts = [
 ];
 ---
 
-<Layout title="Blog - Sujith Christopher">
+<Layout 
+  title="Blog - Sujith Christopher | Technical Articles on Bioengineering & Software Development"
+  description="Read Sujith Christopher's blog featuring technical articles on bioengineering, software development, Arduino programming, Godot game engine, Rust programming, and research insights from IIT Madras."
+  keywords="Sujith Christopher blog, bioengineering blog, software development articles, Arduino tutorials, Godot tutorials, Rust programming, technical writing, research insights, IIT Madras blog"
+>
   <Header />
   
   <main class="pt-16">
